# ChatBox-XY

./: .gitignore  README.md  config.json  main.py  pyproject.toml  quote.json  status.json
.specstory/: .project.json
.specstory/history/: 2025-04-23_05-35-initializing-textmessageevent-with-messageevent.md  2025-04-24_07-51-untitled.md  2025-04-24_10-04-untitled.md  2025-04-25_16-56-untitled.md  2025-04-25_17-32-untitled.md  2025-04-26_03-59-群组信息缓存系统设置.md  2025-04-26_06-01-untitled.md  2025-04-26_15-16-messageevent-judgment-placement-modification.md  2025-04-26_16-28-解决-groupcache-缓存共享问题.md  2025-04-27_05-43-refactoring-messageevent-class-initialization.md  2025-05-02_12-34-简化cachemanager类的获取方法.md  2025-05-03_09-07-python-syntax-error-in-dataclass-conversion.md  2025-05-03_10-54-untitled.md  2025-05-03_16-22-谁是卧底游戏会话设计.md  2025-05-04_05-22-项目修改-主动拉取消息.md  2025-05-04_14-41-微信消息类设计与实现.md  2025-05-04_18-13-编写加载和保存状态函数.md  2025-05-04_18-52-代码文件修改请求.md  2025-05-04_18-54-making-on-exit-an-asynchronous-function.md  2025-05-05_09-18-api接口实现与风格参考.md  2025-05-05_09-33-redis在缓存系统中的应用探讨.md  2025-05-05_18-05-修改matcher系统的装饰器用法.md  2025-05-06_05-21-微信消息发送速度限制.md  2025-05-06_07-36-全局异常处理机制设计讨论.md  2025-05-06_09-15-群聊消息重复请求解决方案.md  2025-05-06_10-18-重写海龟汤插件讨论.md  2025-05-06_11-35-代码返回类型讨论.md  2025-05-06_14-09-设计项目白名单的建议.md  2025-05-07_05-04-错误处理与变量输出.md  2025-05-07_05-49-抖音api数据分析与视频类型区分.md  2025-05-07_07-31-正则表达式匹配结果传递.md  2025-05-07_10-35-检查工作区代码接口一致性.md
plugins/GuessDisease/: main.py
plugins/_douyin/: __init__.py  core.py
src/: bot.py  config.py  message.py  model.py  plugin.py
(+43 files in other folders)
