[project]
name = "chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "dacite>=1.9.2",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "openai>=1.76.0",
    "pillow>=11.2.1",
    "qrcode>=8.1",
    "uvicorn>=0.34.2",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
